# rush_diffusion_policy

./: .gitignore  BAE_MERGE_PLAN.md  Diffusion code.txt  ONLINE_DAGGER_HANDOFF.md  ONLINE_DAGGER_REALROBOT_PLAN.md  README.md  SETUP_GUIDE.md  action_vis.py  bae_eval_real_robot.py  bae_eval_real_robot_dualarm.py  bae_eval_real_robot_dualarm_hand.py  bae_eval_real_robot_rightarm_hand_AIDIN.py  bae_eval_real_robot_rightarm_hand_with_wrench.py  bae_eval_real_robot_rightarm_hand_with_wrench_encoder.py  bae_eval_real_robot_rightarm_hand_without_wrench.py  bae_eval_real_robot_rightarm_insert_plug.py  bae_eval_real_robot_rightarm_insert_plug_fast_loop.py  bae_scheduling_ddim_pigdm.py  bae_test_pigdm.py  common_data_viewer.py  compare_envs.py  conda_environment.yaml  conda_environment_real.yaml  conda_environment_train.yaml  correction_retraining_plan.md  eval_real_robot.py  hdf5_viewer.py  m0609.urdf  m0609.white copy.urdf  orientation_convention_debug.md  readme_rush.md  realtime_control.cpp  requirements.txt  retraining_plan.md  robodiff_freeze.txt  run_online_actor.sh  run_online_learner.sh  run_right.sh  rush_eval_real_robot_imp.py  rush_eval_real_robot_imp_right.py  (+15 more)
analysis/: runreadme.md
searching_grasping_point/(reference)aidin_hand_description/: CMakeLists.txt  README.md  package.xml
searching_grasping_point/(reference)aidin_hand_description/config/: aidin_hand_control.yaml  welcon_slave.yaml
searching_grasping_point/(reference)aidin_hand_description/launch/: left_hand_force_visualization.launch.py  rviz.launch.py  wrench_zeroset.launch.py  wrist_wrench_test.launch.py
searching_grasping_point/(reference)aidin_hand_description/rviz/: default.rviz
searching_grasping_point/(reference)aidin_hand_description/scripts/: aggregated_wrench_visualizer.py  force_control_gui.py  force_visualizer.py  frames_2026-02-13_22.29.31.gv  hand_control_gui.py  monitor_wrench.py  wrench_zeroset.py  wrist_wrench_aggregator.py
searching_grasping_point/(reference)aidin_hand_description/src/: wrist_wrench_aggregator.cpp  wrist_wrench_aggregator_node.cpp
searching_grasping_point/(reference)aidin_hand_description/urdf/: hand.urdf  hand.urdf.xacro  hand_control.xacro  hand_left.urdf.xacro  hand_right.urdf.xacro  xacro2urdf.sh
(+328 files in other folders)
